<resources>
    <!--Course Names-->
    <string name="science">Science</string>
    <string name="mathematics">Mathematics</string>
    <string name="history">History</string>
    <!--Data-->
    <string name="application_data">Application Data</string>
    <string name="student_data">Student Data</string>
    <!--Lesson-->
    <string name="add">Add</string>
    <string name="weekly_schedule">Weekly Schedule</string>
    <string name="edit">Edit</string>
    <string name="classroom">Classroom</string>
    <string name="lesson_name">Lesson Name</string>
    <string name="my_lessons_title">My Lessons</string>
    <string name="add_course">Add Course</string>
    <string name="add_lesson">Add Lesson</string>
    <string name="edit_course">Edit Course Name</string>
    <string name="edit_lesson">Edit Lesson</string>
    <string name="start_time">Start Time: </string>
    <string name="finish_time">Finish Time: </string>
    <!--Homework-->
    <string name="add_homework">Add Homework</string>
    <string name="edit_homework">Edit Homework</string>
    <string name="homework_name">Homework Name</string>
    <string name="homework_subject">Homework Subject</string>
    <string name="homework_date">Date:</string>
    <string name="home_calendar">Weekly Schedule</string>
    <string name="home_homework">Homeworks</string>
    <string name="home_exam">Exams</string>
    <!--Exam-->
    <string name="add_exam">Add Exam</string>
    <string name="edit_exam">Edit Exam</string>
    <string name="exam_name">Exam Name</string>
    <string name="exam_classroom">Exam Classroom</string>
    <string name="exam_date">Date:</string>
    <string name="exam_time">Time:</string>
    <!--Notes-->
    <string name="notes">Notes</string>
    <string name="add_note">Add Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="note_name">Note Name</string>
    <string name="note_subject">Note Subject</string>
    <!--Absenteeism-->
    <string name="absences">Absences</string>
    <string name="add_absence">Add Absence</string>
    <string name="edit_absence">Edit Absence</string>
    <string name="all_day">All Day</string>
    <string name="half_day">Half Day</string>
    <string name="excused">Excused</string>
    <string name="unexcused">Unexcused</string>
    <string name="status">Status: </string>
    <string name="kind">Kind: </string>
    <!--Error-->
    <string name="message_error">Message Error</string>
    <string name="volley_error">Volley Error</string>
    <!--Days-->
    <string name="app_name">School Assistant</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>s
</resources>
