<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".screens.absence.activities.AddAbsenceActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_absence_name"
                android:layout_weight="10"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageButton
                    android:layout_weight="1"
                    android:layout_width="50dp"
                    android:src="@drawable/ic_pencil"
                    android:id="@+id/image_button_edit_lesson"
                    android:scaleType="fitXY"
                    android:background="@drawable/oval_button_background"
                    android:layout_height="50dp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="75dp"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/status"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <RadioGroup
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">
            <RadioButton
                android:id="@+id/radiobutton_all_day"
                android:text="@string/all_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <RadioButton
                android:id="@+id/radiobutton_half_day"
                android:text="@string/half_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="75dp"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/kind"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <RadioGroup
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2">
            <RadioButton
                android:id="@+id/radiobutton_excused"
                android:text="@string/excused"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <RadioButton
                android:id="@+id/radiobutton_unexcused"
                android:text="@string/unexcused"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </RadioGroup>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:paddingTop="5dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:paddingTop="10dp"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/exam_date"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:id="@+id/text_view_date"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_height="wrap_content">
            <ImageButton
                android:layout_width="50dp"
                android:src="@drawable/ic_calendar"
                android:scaleType="fitXY"
                android:id="@+id/image_button_date"
                android:background="@drawable/oval_button_background"
                android:layout_height="50dp" />
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:padding="20dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/button_add_absence"
            android:text="@string/add"
            android:textColor="@android:color/white"
            android:background="@drawable/button_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>