<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.denzcoskun.schoolassistant.activities.HomeActivity">
    <ImageView
        android:background="@drawable/home_background"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="#80000000"
            android:layout_height="match_parent"
            android:weightSum="3">
            <LinearLayout
                android:id="@+id/linearlayout_calendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">
                <ImageView
                    android:src="@drawable/calendar"
                    android:background="@null"
                    android:scaleType="fitCenter"
                    android:layout_width="75dp"
                    android:layout_height="75dp"/>
                <TextView
                    android:text="@string/home_calendar"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linearlayout_homework"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">
                <ImageView
                    android:src="@drawable/homework"
                    android:background="@null"
                    android:scaleType="fitCenter"
                    android:layout_width="75dp"
                    android:layout_height="75dp" />
                <TextView
                    android:text="@string/home_homework"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linearlayout_exams"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1">
                <ImageView
                    android:src="@drawable/exam"
                    android:background="@null"
                    android:scaleType="fitCenter"
                    android:layout_width="75dp"
                    android:layout_height="75dp" />
                <TextView
                    android:text="@string/home_exam"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="version"
            android:paddingBottom="20dp"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>
