<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_son_ders_ekle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinner_lessons"
                    android:layout_weight="10"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageButton
                        android:layout_weight="1"
                        android:layout_width="50dp"
                        android:src="@drawable/ic_pencil"
                        android:id="@+id/image_button_edit_lesson"
                        android:scaleType="fitXY"
                        android:background="@drawable/button_background"
                        android:layout_height="50dp" />
                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>

        <EditText
            android:layout_width="match_parent"
            android:id="@+id/edittext_classroom"
            android:layout_height="wrap_content" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:paddingTop="5dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:paddingTop="10dp"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/start_time"
                    android:textSize="18sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:id="@+id/text_view_start_time"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_height="wrap_content">
                <ImageButton
                    android:layout_width="50dp"
                    android:src="@drawable/ic_clock"
                    android:scaleType="fitXY"
                    android:id="@+id/image_button_edit_start_time"
                    android:background="@drawable/button_background"
                    android:layout_height="50dp" />
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:paddingTop="5dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:paddingTop="10dp"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/finish_time"
                    android:textSize="18sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:id="@+id/text_view_finish_time"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_height="wrap_content">
                <ImageButton
                    android:layout_width="50dp"
                    android:src="@drawable/ic_clock"
                    android:scaleType="fitXY"
                    android:id="@+id/image_button_edit_finish_time"
                    android:background="@drawable/button_background"
                    android:layout_height="50dp" />
            </LinearLayout>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:paddingTop="5dp"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_add_lesson"
                android:text="@string/add"
                android:background="@drawable/button_background"
                android:textColor="@android:color/white"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
